[package]
name = "reapers-wf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
notify-rust = "4.9"
time = {version = "0.3.30", features = ["serde", "parsing", "local-offset", "formatting"]}
toml = "0.8"